# text-editor

./: DEVLOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  monaco-worker.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ffi_export.rs  lib.rs
src-tauri/src/core/: line_cache.rs  mod.rs  rope_buffer.rs  undo_stack.rs  utf8.rs
src-tauri/src/editor/: cursor.rs  edit_commands.rs  editor_state.rs  find_replace.rs  mod.rs
src-tauri/src/platform/: mod.rs  window_embed.rs
src-tauri/src/platform/macos/: clipboard.rs  input.rs  mod.rs  text_input.rs  window.rs
src-tauri/src/platform/win32/: clipboard.rs  ime.rs  input.rs  mod.rs  window.rs
src-tauri/src/render/: minimap.rs  mod.rs  scroll_renderer.rs  text_atlas.rs  text_renderer.rs  theme.rs  wgpu_context.rs
src-tauri/src/syntax/: mod.rs
src/components/: FindReplace.tsx  MarkdownPreview.tsx  MonacoEditor.tsx  NativeEditorHost.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx
src/hooks/: useEditorStore.ts
