[package]
name = "text-editor"
version = "0.1.0"
description = "A multi-functional text editor built with Tauri"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "text_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
chardetng = "1"
log = "0.4"

# Native rendering engine
wgpu = "22"
cosmic-text = "0.12"
ropey = "1.6"
tree-sitter = "0.24"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Globalization",
    "Win32_System_DataExchange",
    "Win32_UI_Input_Ime",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = "0.2"
objc2-foundation = "0.2"
core-graphics = "0.23"
core-text = "20"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
